Updated the readme.html to use the new icon, and to point to the OSDrawer page for reporting bugs and feature requests.
git-svn-id: http://svn.osdrawer.net/armyknife@33 67539fd6-432c-0410-ad19-9ddc0ca9f31c

--- a/documentation/armyknife/readme.html
+++ b/documentation/armyknife/readme.html
@@ -86,8 +86,8 @@ Email them to <a href="mailto:jonas@kirilla.com">jonas@kirilla.com</a>
 <br>
 <br>
 <h3>Bugs? Feature Requests?</h3>
-Check out <a href="http://www.bebugbase.com/browse/bugs/16" target="_parent">BeBugBase</a> first, and if it
-hasn't already been submitted, <a href="http://www.bebugbase.com/add/bug/16" target="_parent">submit</a> it!
+Check out the <a href="http://dev.osdrawer.net/projects/show/armyknife"> Army Knife project page </a> at <a href="http://www.osdrawer.net">OSDrawer.net</a> first, and if it
+hasn't already been submitted, <a href="http://dev.osdrawer.net/projects/armyknife/issues/new">submit</a> it!
 <br>
 <br>
 <b><h3>Thanks:</h3></b>
