Updated version and readme.html
git-svn-id: http://svn.osdrawer.net/armyknife@36 67539fd6-432c-0410-ad19-9ddc0ca9f31c

--- a/documentation/armyknife/readme.html
+++ b/documentation/armyknife/readme.html
@@ -5,42 +5,27 @@
 <body bgcolor="#FFFFFF" text="#000000" link="#0000FF">
 
 <table>
-	<tr>
-		<td valign="top">
-			<img src="./images/armyknife_icon.gif" alt="Army Knife Icon">
-		</td>
-		<td valign="bottom">
-			<h1>Army Knife</h1>
-		</td>
-	</tr>
+<tr><td valign="top">
+<img src="./images/armyknife_icon.gif" alt="Army Knife Icon">
+</td><td valign="bottom"><h1>Army Knife</h1></td></tr>
 </table>
 
-<table border="1">
-<tr>
-<td>
-<img src="./images/armyknife_screen_shot_1.png">
-<td>
-<center><h3>The Army Knife</h3></center><br>
+
+<hr>
+<h3>The Army Knife</h3>
+<img src="./images/armyknife_screen_shot_1.png"><br><br>
 The default tab for The Army Knife can be set using the preferences panel (Edit-&gt;Preferences)
 The list contains all the files that The Army Knife knows about.  You can add files by dragging them
 onto The Army Knife, or empty the list using the Edit-&gt;Clear List command.  The Edit-&gt;Save
 Window Settings command allows users to save the current window location and size as the default.
-You may select multiple files from that list with the following commands.
-<blockquote>
-<table cellpadding="4">
-		<tr><td>Select All</td>          <td>Command-A(Alt-A)</td></tr>
-		<tr><td>Contigous Select</td>    <td>Click first file, Option(Win) Click the last file</td></tr>
-		<tr><td>Noncontigous Select</td> <td>Shift Click all desired files.</td></tr>
-</table>
-</blockquote>
-</tr>
-
-<tr>
-<td>
-<img src="./images/armyknife_screen_shot_2.png">
-</td>
-<td>
-<center><h3>The Editor</h3></center><br>
+You may select multiple files from that list with the following commands.<br>
+<br>
+<b>Select All</b> Command-A(Alt-A)<br>
+<b>Contigous Select</b> Click first file, Option(Win) Click the last file<br>
+<b>Noncontigous Select</b> Shift Click all desired files.<br>
+<hr>
+<h3>The Editor</h3>
+<img src="./images/armyknife_screen_shot_2.png"><br><br>
 Allows the user (you) to edit the attributes and tags of one or more files at once. You tell The Editor to
 work with attributes or tags by useing the radio buttons in the upper right.  The check box "Also Apply To ...."
 allows you to change the file's tags and attributes at the same time.   If you have no files selected the
@@ -49,47 +34,28 @@ check boxes.  When you hit the apply button, The Army Knife will only change the
 for the files selected in the list.  Starting with Army Knife 3.10, there is a new feature that is sure to
 be popular: User Defined Genres.  A user can now make up their own genres and use them for the Genre Attribute.
 This does not work for ID3 Tags because the genre is stored as number and not a string in tags. If a user tries
-to save a User Defined Genre in a tag, the &quot;Other&quot; genre will be saved to the tag.
-</td>
-</tr>
-
-<tr>
-<td>
-<img src="./images/armyknife_screen_shot_3.png">
-</td>
-<td>
-<center><h3>Tags &amp; Attributes</h3></center><br>
+to save a User Defined Genre in a tag, the &quot;Other&quot; genre will be saved to the tag.<br>
+<hr>
+<h3>Tags &amp; Attributes</h3>
+<img src="./images/armyknife_screen_shot_3.png"><br><br>
 If Attributes -&gt; Tags is selected, then Tags &amp; Attributes will copy the value of the attributes into
 the corresponding ID3 tags for every selected file in the list. Otherwise, it will copy the ID3 Tag Values
-into the attributes.
-</td>
-</tr>
-
-<tr>
-<td>
-<img src="./images/armyknife_screen_shot_4.png">
-</td>
-<td>
-<center><h3>Names &amp; Attributes</h3></center><br>
+into the attributes.<br>
+<hr>
+<h3>Names &amp; Attributes</h3>
+<img src="./images/armyknife_screen_shot_4.png"><br><br>
 If Attributes -&gt; Name is choosen, Names &amp; Attributes will rename every file that is selected in the list
 using the file's attributes and the supplied pattern.  The default pattern can be changed in the preference panel.
 (Edit-&gt;Preferences) Otherwise, it will parse each file name according to the supplied pattern, and sets the
 attributes accordingly. The wildcard (/*) can be used for parts of the name that are variable, but you do not want
 to assign to an attribute.  The default pattern can be changed in the preference panel. (Edit-&gt;Preferences)
-</td>
-</tr>
-</table>
 <br>
-<br>
-<h3>Questions? Comments? Suggestions?</h3>
-Email them to <a href="mailto:jonas@kirilla.com">jonas@kirilla.com</a>
-<br>
-<br>
-<h3>Bugs? Feature Requests?</h3>
+<hr>
+<h3>Bugs? Feature Requests?</h3><br>
 Check out the <a href="http://dev.osdrawer.net/projects/show/armyknife"> Army Knife project page </a> at <a href="http://www.osdrawer.net">OSDrawer.net</a> first, and if it
 hasn't already been submitted, <a href="http://dev.osdrawer.net/projects/armyknife/issues/new">submit</a> it!
 <br>
-<br>
+<hr>
 <b><h3>Thanks:</h3></b>
 Brian Tietz for Santa's Gift Bag<br>
 YNOP for the excellent YTabView.<br>
@@ -97,7 +63,8 @@ Technix for the UI suggestions.<br>
 ToBeOrNotToBe for his time and Ogg expertise.<br>
 The BeShare community for all of their help.<br>
 Be for THE Operating System.<br>
-Everyone else in the BeOS community for making it what it is.<br>
+The Haiku devs for making Haiku a reality.<br>
+And everyone else in the BeOS/Haiku community for making it what it is.<br>
 <br>
 <br>
 <br>
