--- a/documentation/armyknife/readme.html
+++ b/documentation/armyknife/readme.html
@@ -46,7 +46,7 @@ h2 {
 <h1><img width="64" height="64" src="./images/armyknife-icon_64.png" alt="Army Knife Icon" />The Army Knife</h1>
 <p>The Army Knife is a powerful tool to perform ID3-Tag to Attribute assignment, Attribute to ID3-Tag assignment, parsing of filenames to fill attributes, and renaming files based on their attributes. It also includes an editor that lets you work with multiple files at once. It supports MP3, Ogg Vorbis and FLAC format.</p>
 <p>Note, that to use Haiku's fast queries, the attributes have to be filled. On the other hand, to be useful on other platforms and stand alone players, the ID3 tags should be filled. Therefore, it's best to keep both in sync.</p>
-<p>You start either by selecting your files and invoking the context menu <i><b>Open With...</b></i> and choose <i><b>Army Knife</b></i> or simply start Army Knife and add files via drag&drop. This is Army Knife's window, the opened files in a list to the right and controls to the left, depending on the selected mode:</p>
+<p>You start either by selecting your files and invoking the context menu <i><b>Open With...</b></i> and choose <i><b>Army Knife</b></i> or simply start Army Knife and add files via drag&amp;drop. This is Army Knife's window, the opened files in a list to the right and controls to the left, depending on the selected mode:</p>
 <img width="798" height="474" src="./images/armyknife.png" alt="Army Knife window" />
 <p>There are three modes of operation, selected with the drop-down menu on top or switched with <span class="key">ALT</span>&#160;<span class="key">&larr;</span>/<span class="key">&rarr;</span>:</p>
 
@@ -80,14 +80,14 @@ Below are the different attributes/tags and their contents. If you can't see any
 <table summary="Name Mode"><tr>
 	<td valign="top"><img width="234" height="295" src="./images/armyknife-name.png" alt="Name Mode" /></td>
 	<td width="30"></td>
-	<td valign="top">You can either rename all selected files according to their attributes (<i><b>Attributes&#160;&rarr;&#160;Name</b></i>) or, conversely, fill attributes according to the filename (<i><b>Name&#160;&rarr;&#160;Attributes</b></i>).<br />
+	<td valign="top"><p>You can either rename all selected files according to their attributes (<i><b>Attributes&#160;&rarr;&#160;Name</b></i>) or, conversely, fill attributes according to the filename (<i><b>Name&#160;&rarr;&#160;Attributes</b></i>).<br />
 As with the Copy mode, make sure the direction is right!</p>
 <p>The filename is analyzed/build with a pattern, selected from the <i><b>Filename</b></i> drop-down menu. Above it is a legend describing what abbreviation corresponds to what attribute. <i><b>\*</b></i> is a wildcard you can use for parts that shouldn't go in any attribute. Of course, you can define your own pattern by choosing <i><b>New..</b></i> from there.</p>
 <p>As usual, again changes take only effect on selected files after pressing <i><b>Apply</b></i>.</p></td>
 </tr></table>
 <p><br /><br /></p>
 
-<h1>Bugs & Feature Requests</h1>
+<h1>Bugs &amp; Feature Requests</h1>
 <p>If you find bugs or have a feature request, check out <a href="http://dev.osdrawer.net/projects/show/armyknife">The Army Knife project page</a>. If your issue wasn't reported already <a href="http://dev.osdrawer.net/projects/armyknife/issues/new">submit</a> it!</p>
 <p><br /><br /></p>
 
