--- a/documentation/armyknife/readme.html
+++ b/documentation/armyknife/readme.html
@@ -1,18 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" ?> 
+<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"../html-dtd/xhtml1-strict.dtd"> 
+	"../html-dtd/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta name="robots" content="all" />
-	<title>The Army Knife</title>
+	<title>ArmyKnife</title>
 
 <style type="text/css">
 body {
-    	font-size: 0.9em;
+	font-size: 0.9em;
 	line-height: 1.5;
-	margin: 30px; 
+	margin: 30px;
 	font-family: "DejaVu Sans",Arial,Helvetica,sans-serif;
 }
 h1 {
@@ -26,7 +26,7 @@ h2 {
 }
 .key {				/* Shortcut (separate with &#160; */
 	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;	
+	-khtml-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 	border-color: #c7c7c7;
@@ -34,20 +34,20 @@ h2 {
 	border-width: 1px;
 	padding: 0px 2px 0px 2px;
 	background-color: #e8e8e8;
-    	font-family: serif;
-   	font-variant: small-caps;
-  	font-size: 0.8em;
+	font-family: serif;
+	font-variant: small-caps;
+	font-size: 0.8em;
 }
-</style> 
+</style>
 
 </head>
 <body>
 
-<h1><img width="64" height="64" src="./images/armyknife-icon_64.png" alt="Army Knife Icon" />The Army Knife</h1>
-<p>The Army Knife is a powerful tool to perform ID3-Tag to Attribute assignment, Attribute to ID3-Tag assignment, parsing of filenames to fill attributes, and renaming files based on their attributes. It also includes an editor that lets you work with multiple files at once. It supports MP3, Ogg Vorbis and FLAC format.</p>
+<h1><img width="64" height="64" src="./images/armyknife-icon_64.png" alt="ArmyKnife Icon" />ArmyKnife</h1>
+<p>ArmyKnife is a powerful tool to perform ID3-Tag to Attribute assignment, Attribute to ID3-Tag assignment, parsing of filenames to fill attributes, and renaming files based on their attributes. It also includes an editor that lets you work with multiple files at once. It supports MP3, Ogg Vorbis and FLAC format.</p>
 <p>Note, that to use Haiku's fast queries, the attributes have to be filled. On the other hand, to be useful on other platforms and stand alone players, the ID3 tags should be filled. Therefore, it's best to keep both in sync.</p>
-<p>You start either by selecting your files and invoking the context menu <i><b>Open With...</b></i> and choose <i><b>Army Knife</b></i> or simply start Army Knife and add files via drag&amp;drop. This is Army Knife's window, the opened files in a list to the right and controls to the left, depending on the selected mode:</p>
-<img width="798" height="474" src="./images/armyknife.png" alt="Army Knife window" />
+<p>You start either by selecting your files and invoking the context menu <i><b>Open With...</b></i> and choose <i><b>ArmyKnife</b></i> or simply start ArmyKnife and add files via drag&amp;drop. This is ArmyKnife's window, the opened files in a list to the right and controls to the left, depending on the selected mode:</p>
+<img src="./images/armyknife.png" alt="ArmyKnife window" />
 <p>There are three modes of operation, selected with the drop-down menu on top or switched with <span class="key">ALT</span>&#160;<span class="key">&larr;</span>/<span class="key">&rarr;</span>:</p>
 
 <h2>Edit Mode</h2>
@@ -60,7 +60,7 @@ Below are the different attributes/tags and their contents. If you can't see any
 <p>The "Genre" field is a bit of a special case: If you choose to set a custom genre, only Haiku attributes will contain your text. ID3-Tags only show standard genres and will fall back to "Other".</p>
 <p>There's some convenient keyboard navigation when you have to edit a tag of single files, e.g. "Title" and "Track" of an album. The cursor can stay in the respective tag's text box while you select a new file with keyboard shortcuts:</p>
 	<table summary="Keyboard navigation" cellpadding="0">
-      <tr><td width="100"><span class="key">ALT</span>&#160;<span class="key">HOME</span></td><td>First file</td></tr>
+	<tr><td width="100"><span class="key">ALT</span>&#160;<span class="key">HOME</span></td><td>First file</td></tr>
 	<tr><td><span class="key">ALT</span>&#160;<span class="key">END</span></td><td>Last file</td></tr>
 	<tr><td><span class="key">ALT</span>&#160;<span class="key">&uarr;</span></td><td>Previous file</td></tr>
 	<tr><td><span class="key">ALT</span>&#160;<span class="key">&darr;</span></td><td>Next file</td></tr>
@@ -87,19 +87,28 @@ As with the Copy mode, make sure the direction is right!</p>
 </tr></table>
 <p><br /><br /></p>
 
-<h1>Bugs &amp; Feature Requests</h1>
-<p>If you find bugs or have a feature request, check out <a href="http://dev.osdrawer.net/projects/show/armyknife">The Army Knife project page</a>. If your issue wasn't reported already <a href="http://dev.osdrawer.net/projects/armyknife/issues/new">submit</a> it!</p>
-<p><br /><br /></p>
-
-<h1>Thank you</h1>
-<p>Brian Tietz for Santa's Gift Bag.<br />
+<h3>Bugs? Feature Requests?</h3>
+Check out the <a href="https://github.com/HaikuArchives/ArmyKnife">ArmyKnife project page</a> at <a href="https://github.com/HaikuArchives">HaikuArchives on Github</a> first, and if it
+hasn't already been submitted, <a href="https://github.com/HaikuArchives/ArmyKnife/issues/new">submit</a> it!
+<br />
+<br />
+<b><h3>Thanks:</h3></b>
+Jason Burgess and Flip Side Software for making ArmyKnife and making it Open Source<br />
+Brian Tietz for Santa's Gift Bag<br />
 YNOP for the excellent YTabView.<br />
 Technix for the UI suggestions.<br />
 ToBeOrNotToBe for his time and Ogg expertise.<br />
 The BeShare community for all of their help.<br />
 Be for THE Operating System.<br />
-The Haiku devs for making Haiku a reality.<br />
-And everyone else in the BeOS/Haiku community for making it what it is.</p>
-
+Everyone else in the BeOS community for making it what it is.<br />
+<br />
+Jonas Sundström and Ryan Leavengood for keeping ArmyKnife working in the transition from BeOS to Haiku in the OSDrawer.net days.<br />
+Haiku for the new Operating System.<br />
+All of the people who have worked on Haiku since 2001 to make Haiku what it is now.<br />
+HaikuPorts for helping to automate building and packaging of thousands of packages for Haiku including this one.<br />
+HaikuArchives for giving us a place to keep old BeOS programs upto date<br />
+Taglib and MusicBrainz for their nifty open source libraries<br />
+The Google Code-In students who completed several small tasks for ArmyKnife from 2012-2020<br />
+<br />
 </body>
 </html>
