--- a/documentation/armyknife/readme.html
+++ b/documentation/armyknife/readme.html
@@ -107,6 +107,7 @@ Haiku for the new Operating System.<br />
 All of the people who have worked on Haiku since 2001 to make Haiku what it is now.<br />
 HaikuPorts for helping to automate building and packaging of thousands of packages for Haiku including this one.<br />
 HaikuArchives for giving us a place to keep old BeOS programs upto date<br />
+The translators at Polyglot for translating to several languages now<br />
 Taglib and MusicBrainz for their nifty open source libraries<br />
 The Google Code-In students who completed several small tasks for ArmyKnife from 2012-2020<br />
 <br />
